--- a/composer.json
+++ b/composer.json
@@ -19,13 +19,13 @@
         ]
     },
     "require": {
-        "php": "^7.2",
+        "php": "^7.2 || ^8.1",
         "ext-soap": "*",
         "symfony/options-resolver": "^3.4 || ^4.3 || ^5.0",
         "symfony/polyfill-iconv": "^1.13.1"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^2.16",
+        "friendsofphp/php-cs-fixer": "^2.16 || ^3.46",
         "kasperg/phing-github": "0.2.*",
         "phing/phing": "^2.16.3",
         "php-vcr/php-vcr": "^1.4.4",
